(PC-3772): Fix scrollbar for booked offer screen

--- a/src/styles/components/layout/Booking/_Booking.scss
+++ b/src/styles/components/layout/Booking/_Booking.scss
@@ -6,6 +6,7 @@
   &.entered {
     top: 0;
     transition: top 250ms ease-in-out;
+    overflow: scroll;
   }
 
   &.entering {
